Remove TableDefinition requirement for constructing WhereFilter